added DI and foldering structure to project

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,13 @@
 plugins {
     id 'com.android.application'
-    //id 'org.jetbrains.kotlin.android'
+    id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
+    id 'com.google.dagger.hilt.android'
 }
 
+kapt {
+    correctErrorTypes true
+}
 android {
     namespace 'bade.krushna.xmlflowsdemo'
     compileSdk 33
@@ -23,13 +28,21 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    compileOptions {
+    /*compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-/*    kotlinOptions {
+    kotlinOptions {
         jvmTarget = '1.8'
     }*/
+
+    compileOptions {
+       sourceCompatibility JavaVersion.VERSION_17
+       targetCompatibility JavaVersion.VERSION_17
+   }
+   kotlinOptions {
+       jvmTarget = '17'
+   }
 }
 
 dependencies {
@@ -42,11 +55,17 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
-    def lifecycle_version = "2.6.1"
-    def arch_version = "2.2.0"
+
+
+    ///retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.google.code.gson:gson:2.10.1'
+   /* def lifecycle_version = "2.6.1"
+    def arch_version = "2.2.0"*/
 
     //implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
-    //implementation "androidx.activity:activity-ktx:1.7.2"
+    implementation "androidx.activity:activity-ktx:1.7.2"
     //implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:$lifecycle_version"
     //kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
 
@@ -55,4 +74,8 @@ dependencies {
     //flows
     //implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"
     //implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
+
+    ///hilt
+    implementation "com.google.dagger:hilt-android:2.44"
+    kapt "com.google.dagger:hilt-compiler:2.44"
     }
