--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.XMLFlowsDemo"
         tools:targetApi="31">
         <activity
-            android:name=".presentation.ui.views.mainActivity.MainActivity"
+            android:name="bade.krushna.storeApp.presentation.ui.views.mainActivity.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
