--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,10 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
+    id 'kotlin-parcelize'
     id 'com.google.dagger.hilt.android'
+    //id 'androidx.navigation.safeargs'
+
 }
 
 kapt {
@@ -10,23 +13,35 @@ kapt {
 }
 android {
     namespace 'bade.krushna.xmlflowsdemo'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "bade.krushna.xmlflowsdemo"
         minSdk 24
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        vectorDrawables {
+            useSupportLibrary true
+        }
+
     }
 
     buildTypes {
+        debug{
+            buildConfigField 'boolean',"useXML", useXML
+        }
         release {
+            buildConfigField 'boolean',"useXML", useXML
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+    }
+    buildFeatures{
+        compose true
+        buildConfig true
     }
     /*compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -42,40 +57,61 @@ android {
    }
    kotlinOptions {
        jvmTarget = '17'
-   }
-}
 
+   }
+    composeOptions {
+        kotlinCompilerExtensionVersion '1.4.0'
+    }
+
+    packagingOptions {
+        resources {
+            excludes += '/META-INF/{AL2.0,LGPL2.1}'
+        }
+    }
+
+}
 dependencies {
+    //compose
+    implementation 'androidx.activity:activity-compose:1.4.0-alpha01'
+    implementation platform('androidx.compose:compose-bom:2022.10.00')
+    implementation 'androidx.compose.ui:ui'
+    implementation 'androidx.compose.ui:ui-graphics'
+    implementation 'androidx.compose.ui:ui-tooling-preview'
+    implementation 'androidx.compose.material3:material3'
 
     //implementation 'androidx.core:core-ktx:1.8.0'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.5.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
+    //implementation "androidx.appcompat:appcompat:1.6.1"
+    implementation 'com.google.android.material:material:1.5.0'
+    //implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1'
+    //implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
 
 
     ///retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.google.code.gson:gson:2.10.1'
-   /* def lifecycle_version = "2.6.1"
-    def arch_version = "2.2.0"*/
+    implementation 'com.squareup.okhttp:okhttp:2.7.5'
 
-    //implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    //activity ktx
     implementation "androidx.activity:activity-ktx:1.7.2"
-    //implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:$lifecycle_version"
-    //kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
 
-
-
-    //flows
-    //implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"
-    //implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
+    //fragment ktx
+    //implementation "androidx.fragment:fragment-ktx:1.6.0"
 
     ///hilt
-    implementation "com.google.dagger:hilt-android:2.44"
-    kapt "com.google.dagger:hilt-compiler:2.44"
-    }
+    implementation "com.google.dagger:hilt-android:2.44.2"
+    kapt "com.google.dagger:hilt-compiler:2.44.2"
+
+    // JSON
+    implementation 'org.json:json:20230618'
+
+
+    //navigation
+    //implementation 'androidx.navigation:navigation-fragment-ktx:2.6.0'
+    //implementation 'androidx.navigation:navigation-ui-ktx:2.6.0'
+
+
+
+}
