--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
             android:label="@string/title_activity_main2"
             android:theme="@style/Theme.XMLFlowsDemo" />
         <activity
-            android:name="bade.krushna.storeApp.presentation.ui.views.mainActivity.MainActivity"
+            android:name="bade.krushna.storeApp.presentation.ui.mainActivity.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
