--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,11 +12,11 @@ kapt {
     correctErrorTypes true
 }
 android {
-    namespace 'bade.krushna.xmlflowsdemo'
+    namespace 'bade.krushna.storeApp'
     compileSdk 34
 
     defaultConfig {
-        applicationId "bade.krushna.xmlflowsdemo"
+        applicationId "bade.krushna.storeApp"
         minSdk 24
         targetSdk 34
         versionCode 1
@@ -79,6 +79,7 @@ dependencies {
     implementation 'androidx.compose.ui:ui'
     implementation 'androidx.compose.ui:ui-graphics'
     implementation 'androidx.compose.ui:ui-tooling-preview'
+    implementation 'androidx.compose.ui:ui-tooling:1.0.0-beta09'
     implementation 'androidx.compose.material3:material3'
 
     //implementation 'androidx.core:core-ktx:1.8.0'
